sample/asm/errors/absolute_jump_negative.asm
.function: main/0
    jump .-1
    izero 0
    return
.end
